# overengineered-cloudfront-s3-static-website

./: .gitignore  README.md  flake.nix  log_ingest.py  pyproject.toml  static_website_test_cases.py  statics3.py
.github/workflows/: build.yml
overengineered_cloudfront_s3_static_website/: __init__.py  __main__.py  certificate_validator.py  edge_hook.py  edge_hook_deluxe.py  edge_hook_deluxe_draft.py  log_ingest.py  template.py
src/overengineered_cloudfront_s3_static_website/: __init__.py  __main__.py  certificate_validator.py  cli.py  log_ingest.py  template.py
src/overengineered_cloudfront_s3_static_website/static/: viewer_request.js  viewer_response.js
tests/: test_log_parsing.py
